# bb_telnet

./: .gitignore  Makefile  README.md  build.sh  telnet.code-workspace
src/: CMakeLists.txt
src/include/: autoconf.h  autoconf.h.B  libbb.h
src/source/: libbb.c  telnet.c
